Update and rename CatApp.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Project</title>
 </head>
-<link rel="stylesheet" href="catApp.css">
+<link rel="stylesheet" href="style.css">
 <body>
     <!-- <h1><b>CatPhotoApp</b></h1>
     <br>
@@ -88,4 +88,5 @@
 
     </form> -->
 </body>
+
 </html>
