--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <br>
     <h2>Cat Photos</h2>
 <br> -->
-<p style="font-size:30px; margin:100px" ><b>BISE</b> result of part 2 will be announced at <span style="font-size:40px;"id="p"><i>2:P.M Friday </i><b>(<u>March 17,2025</u>)</b></span> </p>
-    <!-- <p>Everyone <em>loves</em> <a rel="noopener" href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg" target="_blank">cute cats </a>online!
+
+    <p>Everyone <em>loves</em> <a rel="noopener" href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/running-cats.jpg" target="_blank">cute cats </a>online!
     <br>
     See more <a rel="noopener" href="https://freecatphotoapp.com/" target="_blank">cat photos </a>in our gallery.</p>
     <br>
@@ -86,7 +86,8 @@
         <br>
         No Copyright - <a rel="noopener" href="https://www.freecodecamp.org/" target="_blank">freecodeCamp.org</a>
 
-    </form> -->
+    </form>
 </body>
 
 </html>
+
